# GLLearn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  txt
assimp/: CMakeLists.txt
glad/src/: glad.c
glm/: CMakeLists.txt
include/: GLFun.h  Window.h  camera.h  cppFun.h  mesh.h  model.h  render.h  shader.h
include/glad/: glad.h
resources/assets/mary/: Marry.mtl
resources/objects/Spaceship_Modular_Star_Sparrow-932ce79b/fbx/: metadata
resources/objects/restaurant_chair_and_tab_extracted/: scene.gltf
resources/shaders/: FragmentShader.frag  FragmentShader.glsl  VertexShader.glsl  VertexShader.vert  basic_lighting.fs  basic_lighting.vs  ibl_specular_textured.cpp  light.fs  light.vs  light_cube.fs  light_cube.vs  pbr.fs  pbr.vs  shadow_map_depth.fs  shadow_map_depth.vs
shaders/: FragmentShader.frag  VertexShader.vert
src/: GLFun.cpp  Window.cpp  cppFun.cpp  glad.c  main.cpp  shader.cpp
